Added Appointments to mobile_navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="issues">Issues</string>
     <string name="events">Events</string>
     <string name="social">Social</string>
+    <string name="appointments">Appointments</string>
 </resources>
