Added Become Volunteer to mobile_navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="events">Events</string>
     <string name="social">Social</string>
     <string name="appointments">Appointments</string>
+    <string name="become_volunteer">Become Volunteer</string>
 </resources>
