Added Share your details to mobile_navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="social">Social</string>
     <string name="appointments">Appointments</string>
     <string name="become_volunteer">Become Volunteer</string>
+    <string name="share_your_details">Share your details</string>
 </resources>
