--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="appointments">Appointments</string>
     <string name="become_volunteer">Become Volunteer</string>
     <string name="share_your_details">Share your details</string>
+    <string name="my_proflie">My proflie</string>
 </resources>
