--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="become_volunteer">Become Volunteer</string>
     <string name="share_your_details">Share your details</string>
     <string name="my_proflie">My proflie</string>
+    <string name="login">Login</string>
 </resources>
